--- a/code_generator_hook/views/code_generator.xml
+++ b/code_generator_hook/views/code_generator.xml
@@ -1,57 +1,70 @@
-<?xml version= "1.0" ?>
+<?xml version="1.0" ?>
 <odoo>
+    <record model="ir.ui.view" id="code_generator_module_hook_form_inherit">
+        <field name="name">code.generator.module.form.inherit</field>
+        <field name="model">code.generator.module</field>
+        <field name="inherit_id" ref="code_generator.code_generator_module_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//page[@name='Elements']" position="after">
+                <page string="Hook" name="Hook">
+                    <group name="pre_init_hook" string="pre_init_hook">
+                        <group>
+                            <field name="pre_init_hook_show" />
+                        </group>
+                        <group string="Feature" attrs="{'invisible': [('pre_init_hook_show', '=', False)]}">
+                            <field name="pre_init_hook_feature_general_conf" />
+                        </group>
+                    </group>
 
-  <record model="ir.ui.view" id="code_generator_module_hook_form_inherit">
-    <field name="name">code.generator.module.form.inherit</field>
-    <field name="model">code.generator.module</field>
-    <field name="inherit_id" ref="code_generator.code_generator_module_form"/>
-    <field name="arch" type="xml">
-      <xpath expr="//page[@name='Elements']" position="after">
-        <page string="Hook" name="Hook">
-          <group name="pre_init_hook" string="pre_init_hook">
-            <group>
-              <field name="pre_init_hook_show"/>
-            </group>
-            <group string="Feature" attrs="{'invisible': [('pre_init_hook_show', '=', False)]}">
-              <field name="pre_init_hook_feature_general_conf"/>
-            </group>
-          </group>
+                    <field
+                        name="pre_init_hook_code"
+                        attrs="{'invisible': [('pre_init_hook_show', '=', False)]}"
+                        nolabel="1"
+                        widget="ace"
+                        options="{'mode': 'python'}"
+                    />
 
-          <field name="pre_init_hook_code" attrs="{'invisible': [('pre_init_hook_show', '=', False)]}" nolabel="1"
-                 widget="ace" options="{'mode': 'python'}"/>
+                    <group name="post_init_hook" string="post_init_hook">
+                        <group>
+                            <field name="post_init_hook_show" />
+                        </group>
+                        <group string="Feature" attrs="{'invisible': [('post_init_hook_show', '=', False)]}">
+                            <field name="post_init_hook_feature_general_conf" />
+                            <field name="post_init_hook_feature_code_generator" />
+                        </group>
+                    </group>
+                    <field
+                        name="post_init_hook_code"
+                        attrs="{'invisible': [('post_init_hook_show', '=', False)]}"
+                        nolabel="1"
+                        widget="ace"
+                        options="{'mode': 'python'}"
+                    />
 
-          <group name="post_init_hook" string="post_init_hook">
-            <group>
-              <field name="post_init_hook_show"/>
-            </group>
-            <group string="Feature" attrs="{'invisible': [('post_init_hook_show', '=', False)]}">
-              <field name="post_init_hook_feature_general_conf"/>
-              <field name="post_init_hook_feature_code_generator"/>
-            </group>
-          </group>
-          <field name="post_init_hook_code" attrs="{'invisible': [('post_init_hook_show', '=', False)]}" nolabel="1"
-                 widget="ace" options="{'mode': 'python'}"/>
+                    <group name="uninstall_hook" string="uninstall_hook">
+                        <group>
+                            <field name="uninstall_hook_show" />
+                        </group>
+                        <group string="Feature" attrs="{'invisible': [('uninstall_hook_show', '=', False)]}">
+                            <field name="uninstall_hook_feature_general_conf" />
+                            <field name="uninstall_hook_feature_code_generator" />
+                        </group>
+                    </group>
+                    <field
+                        name="uninstall_hook_code"
+                        attrs="{'invisible': [('uninstall_hook_show', '=', False)]}"
+                        nolabel="1"
+                        widget="ace"
+                        options="{'mode': 'python'}"
+                    />
 
-          <group name="uninstall_hook" string="uninstall_hook">
-            <group>
-              <field name="uninstall_hook_show"/>
-            </group>
-            <group string="Feature" attrs="{'invisible': [('uninstall_hook_show', '=', False)]}">
-              <field name="uninstall_hook_feature_general_conf"/>
-              <field name="uninstall_hook_feature_code_generator"/>
-            </group>
-          </group>
-          <field name="uninstall_hook_code" attrs="{'invisible': [('uninstall_hook_show', '=', False)]}" nolabel="1"
-                 widget="ace" options="{'mode': 'python'}"/>
-
-          <group name="extra" string="Extra">
-            <group>
-              <field name="hook_constant_code" nolabel="1" widget="ace" options="{'mode': 'python'}"/>
-            </group>
-          </group>
-        </page>
-      </xpath>
-    </field>
-  </record>
-
+                    <group name="extra" string="Extra">
+                        <group>
+                            <field name="hook_constant_code" nolabel="1" widget="ace" options="{'mode': 'python'}" />
+                        </group>
+                    </group>
+                </page>
+            </xpath>
+        </field>
+    </record>
 </odoo>
